--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/login-register.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
@@ -29,7 +29,7 @@
             <button class="btn" type="submit">Submit</button>
 
             <div class="register-link">
-                <p>Have already an account? <a href="#">Sign up</a></p>
+                <p>Have already an account? <a href="./register.html">Sign up</a></p>
             </div>
         </form>
     </div>
