--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/login-register.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
+        <div id="loader">
+            <img src="./img/loading.gif" alt="Cargando...">
+        </div>
 
-        <div class="wrapper">
+        <div id="content" class="wrapper">
             <form action="">
                 <h1>Login</h1>
                 <div class="input-box">
@@ -29,10 +32,10 @@
                 <button class="btn" type="submit">Sign in</button>
 
                 <div class="register-link">
-                    <p>Don't have an account? <a href="#">Register</a></p>
+                    <p>Don't have an account? <a href="./register.html">Register</a></p>
                 </div>
             </form>
         </div>
-
+    <script src="./js/loader.js"></script>
 </body>
 </html>
