--- a/register.html
+++ b/register.html
@@ -29,7 +29,7 @@
             <button class="btn" type="submit">Submit</button>
 
             <div class="register-link">
-                <p>Have already an account? <a href="./register.html">Sign up</a></p>
+                <p>Have already an account? <a href="./index.html">Sign up</a></p>
             </div>
         </form>
     </div>
